--- a/src/main/configs/sth_sth_v2.yaml
+++ b/src/main/configs/sth_sth_v2.yaml
@@ -1,7 +1,8 @@
 paths:
   videos_folder: &vidpath /data-ssd/v2-gulp-160/
 
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/v2_gulp160_labels_classif1_cap0
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/v2_gulp160_labels_classif0.1_cap0.9
+
 
   train_annot: &train_annot /data-ssd/v2-train.json
   validation_annot: /data-ssd/v2-validation.json
@@ -9,8 +10,8 @@ paths:
 
 
 pretrained:
-  pretrained_folder:
-  pretrained_file: model.best
+  pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/v2_gulp160_labels_classif0.1_cap0.9
+  pretrained_file: model.latest
 
 device:
   synchronize_gpu: &sync True
@@ -33,10 +34,10 @@ model:
 loss:
   caption_loss: SequenceCrossEntropy
   balanced: False
-  w_caption_loss: 0
+  w_caption_loss: 0.9
 
   classif_loss: CrossEntropy
-  w_classif_loss: 1
+  w_classif_loss: 0.1
 
 
 
@@ -64,7 +65,7 @@ validation:
   verbose: True
 
 criteria:
-  score: classif_accuracy
+  score: caption_accuracy
   higher_is_better: True
 
 targets:
