--- a/src/main/configs/sth_sth_v2.yaml
+++ b/src/main/configs/sth_sth_v2.yaml
@@ -1,7 +1,7 @@
 paths:
   videos_folder: &vidpath /data-ssd/v2-gulp-160/
 
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/v2_gulp160_labels_classif0.1_cap0.9
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/v2_gulp160_labels_classif0.01_cap0.99
 
 
   train_annot: &train_annot /data-ssd/v2-train.json
@@ -11,7 +11,7 @@ paths:
 
 pretrained:
   pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/v2_gulp160_labels_classif0.1_cap0.9
-  pretrained_file: model.latest
+  pretrained_file: model.best
 
 device:
   synchronize_gpu: &sync True
@@ -34,10 +34,10 @@ model:
 loss:
   caption_loss: SequenceCrossEntropy
   balanced: False
-  w_caption_loss: 0.9
+  w_caption_loss: 0.99
 
   classif_loss: CrossEntropy
-  w_classif_loss: 0.1
+  w_classif_loss: 0.01
 
 
 
