--- a/src/main/configs/two_stream.yaml
+++ b/src/main/configs/two_stream.yaml
@@ -1,15 +1,16 @@
 paths:
-  videos_folder: &vidpath /data-ssd/20bn-somethingsomething-2017-10-31/
+  videos_folder: &vidpath /data-ssd/v2-gulp-160/
 
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/Jan_two_stream_bijesterrc3d_label
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/v2_labels_classif1_cap0
 
-  train_annot: &train_annot /data/20bn-somethingsomething/json/train_20171031.json.gz
-  validation_annot: /data/20bn-somethingsomething/json/validation_20171031.json.gz
-  test_annot: /data/20bn-somethingsomething/json/test_20171031.json.gz
+  train_annot: &train_annot /data/20bn-something-something-v2/v2-train.json
+  validation_annot: /data/20bn-something-something-v2/v2-validation.json
+  test_annot: /data/20bn-something-something-v2/v2-validation.json
+
 
 pretrained:
-  pretrained_folder:
-  pretrained_file: model.best
+  pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/v2_labels_classif1_cap0
+  pretrained_file: model.latest
 
 device:
   synchronize_gpu: &sync True
@@ -26,7 +27,7 @@ model:
   encoder_kwargs_jj: {encoder_output_size: 1024,
                    rnn_output_size: 1024,
                    c2d_output_size: 0,
-                   c3d_output_size: 256}
+                   c3d_output_size: 512}
   decoder: CoupledLSTMDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 256,
@@ -37,10 +38,10 @@ model:
 loss:
   caption_loss: SequenceCrossEntropy
   balanced: False
-  w_caption_loss: 0.9
+  w_caption_loss: 0
 
   classif_loss: CrossEntropy
-  w_classif_loss: 0.1
+  w_classif_loss: 1
 
 
 
@@ -68,7 +69,7 @@ validation:
   verbose: True
 
 criteria:
-  score: caption_accuracy
+  score: classif_accuracy
   higher_is_better: True
 
 targets:
