--- a/src/main/configs/two_stream.yaml
+++ b/src/main/configs/two_stream.yaml
@@ -1,7 +1,7 @@
 paths:
   videos_folder: &vidpath /data-ssd/v2-gulp-160/
 
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/v2_labels_classif1_cap0
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/v2_c3d_288_labels_classif1_cap0
 
   train_annot: &train_annot /data/20bn-something-something-v2/v2-train.json
   validation_annot: /data/20bn-something-something-v2/v2-validation.json
@@ -9,7 +9,7 @@ paths:
 
 
 pretrained:
-  pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/v2_labels_classif1_cap0
+  pretrained_folder:
   pretrained_file: model.latest
 
 device:
@@ -17,17 +17,16 @@ device:
   gpus: &gpus [0, 1]
 
 dataloaders:
-  kwargs: {batch_size: 16, num_workers: 8, pin_memory: False}
+  kwargs: {batch_size: 12, num_workers: 8, pin_memory: False}
 
 model:
   type: EncoderDecoder
-  encoder: BIJesterEncoder
+  encoder: TwoStreamEncoder
   encoder_args:
-  encoder_kwargs:  {pretrained_path: , freeze: False}
-  encoder_kwargs_jj: {encoder_output_size: 1024,
+  encoder_kwargs: {encoder_output_size: 1024,
                    rnn_output_size: 1024,
-                   c2d_output_size: 0,
-                   c3d_output_size: 512}
+                   c2d_out_ch: 0,
+                   c3d_out_ch: 36}
   decoder: CoupledLSTMDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 256,
