--- a/src/main/configs/two_stream.yaml
+++ b/src/main/configs/two_stream.yaml
@@ -1,7 +1,7 @@
 paths:
   videos_folder: &vidpath /data-ssd/v2-gulp-160/
 
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/v2_c3d_0_c2_32_labels_classif1_cap0
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/v2_gulp160_two_stream_c2_0_c3_32_labels_cutoff5_classif0.1_cap0.9
 
   train_annot: &train_annot /data/20bn-something-something-v2/v2-train.json
   validation_annot: /data/20bn-something-something-v2/v2-validation.json
@@ -9,8 +9,8 @@ paths:
 
 
 pretrained:
-  pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/v2_c3d_0_c2_32_labels_classif1_cap0
-  pretrained_file: model.best
+  pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/v2_gulp160_two_stream_c2_0_c3_32_labels_cutoff5_classif0.1_cap0.9
+  pretrained_file: model.be---st
 
 device:
   synchronize_gpu: &sync True
@@ -25,8 +25,8 @@ model:
   encoder_args:
   encoder_kwargs: {encoder_output_size: 1024,
                    rnn_output_size: 1024,
-                   c2d_out_ch: 32,
-                   c3d_out_ch: 0}
+                   c2d_out_ch: 0,
+                   c3d_out_ch: 32}
   decoder: CoupledLSTMDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 256,
@@ -68,7 +68,7 @@ validation:
   verbose: True
 
 criteria:
-  score: classif_accuracy
+  score: caption_accuracy
   higher_is_better: True
 
 targets:
