--- a/src/main/configs/waseem_configs/tbox/test_config.yaml
+++ b/src/main/configs/waseem_configs/tbox/test_config.yaml
@@ -1,7 +1,7 @@
 paths:
   videos_folder: &vidpath /home/waseem/data/
 
-  checkpoint_folder: /home/waseem/Models/test_ptcap_config
+  checkpoint_folder: /home/waseem/Models/ptcap/2stream_3d36_cla1
 
   train_annot: &train_annot /home/waseem/data/json/v2-train.json
   validation_annot: /home/waseem/data/json/v2-validation.json
@@ -9,7 +9,7 @@ paths:
 
 
 pretrained:
-  pretrained_folder:
+  pretrained_folder: /home/waseem/Models/ptcap/2stream_3d36_cla1
   pretrained_file: model.best
 
 device:
@@ -17,7 +17,7 @@ device:
   gpus: &gpus [0]
 
 dataloaders:
-  kwargs: {batch_size: 4, num_workers: 8, pin_memory: False}
+  kwargs: {batch_size: 11, num_workers: 11, pin_memory: False}
 
 model:
   type: EncoderDecoder
@@ -37,12 +37,10 @@ model:
 loss:
   caption_loss: SequenceCrossEntropy
   balanced: False
-  w_caption_loss: 0.9
+  w_caption_loss: 0
 
   classif_loss: CrossEntropy
-  w_classif_loss: 0.1
-
-
+  w_classif_loss: 1
 
 optimizer:
   type: &optimizer Adam
