--- a/src/main/configs/two_stream.yaml
+++ b/src/main/configs/two_stream.yaml
@@ -1,24 +1,24 @@
 paths:
   videos_folder: &vidpath /data-ssd/v2-gulp-160/
 
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/test_v2_gulp160_two_stream_c2_48_c3_16_labels_cutoff5_classif0.1_cap0.9_single
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/ECCV/Test
 
   train_annot: &train_annot /data/20bn-something-something-v2/v2-train-single.json
-  validation_annot: /data/20bn-something-something-v2/v2-validation-single.json
-  test_annot: /data/20bn-something-something-v2/v2-validation-single.json
+  validation_annot: /data/20bn-something-something-v2/v2-test-single.json
+  test_annot: /data/20bn-something-something-v2/v2-test-single.json
 
 
 pretrained:
-  pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/ECCV/v2_gulp160_two_stream_c2_48_c3_16_labels_cutoff5_classif1_cap0
+  pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/ECCV/v2_gulp160_two_stream_c2_0_c3_64_labels_cutoff5_classif0.1_cap0.9
   pretrained_file: model.best
   load_encoder_only: True
 
 device:
   synchronize_gpu: &sync True
-  gpus: &gpus [0,1]
+  gpus: &gpus [0, 1]
 
 dataloaders:
-  kwargs: {batch_size: 16, num_workers: 8, pin_memory: False}
+  kwargs: {batch_size: 2, num_workers: 8, pin_memory: False}
 
 model:
   type: EncoderDecoder
@@ -26,8 +26,8 @@ model:
   encoder_args:
   encoder_kwargs: {encoder_output_size: 1024,
                    rnn_output_size: 1024,
-                   c2d_out_ch: 48,
-                   c3d_out_ch: 16}
+                   c2d_out_ch: 0,
+                   c3d_out_ch: 64}
   decoder: CoupledLSTMDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 256,
@@ -65,7 +65,7 @@ training:
 
 validation:
   frequency: 1
-  teacher_force: True
+  teacher_force: False
   verbose: True
 
 criteria:
