--- a/src/main/configs/real_time.yaml
+++ b/src/main/configs/real_time.yaml
@@ -10,7 +10,8 @@ paths:
 
 
 pretrained:
-  pretrained_folder:
+  pretrained_encoder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/ECCV/v2_gulp160_two_stream_c2_0_c3_32_labels_cutoff5_classif0.1_cap0.9
+  pretrained_decoder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/ECCV/v2_gulp160_two_stream_c2_0_c3_32_labels_cutoff5_classif0.1_cap0.9
   pretrained_file: model.best
   load_encoder_only: True
 
@@ -26,7 +27,7 @@ model:
   encoder: C3dLSTMEncoder
   encoder_args:
   encoder_kwargs: {encoder_output_size: 1024,
-                   rnn_output_size: 512}
+                   rnn_output_size: 1024}
   decoder: CoupledLSTMDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 256,
@@ -47,7 +48,7 @@ loss:
 
 optimizer:
   type: &optimizer Adam
-  kwargs: {lr: 0.0001}
+  kwargs: {lr: 0.00001}
 
 scheduler:
   type: ReduceLROnPlateau
