--- a/src/main/configs/reinforce.yaml
+++ b/src/main/configs/reinforce.yaml
@@ -1,7 +1,7 @@
 paths:
   videos_folder: &vidpath /data-ssd/v2-gulp-160/
 
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/RL
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/RL2/
 
   pretrained_file: model.best
 
@@ -11,7 +11,7 @@ paths:
 
 
 pretrained:
-  pretrained_encoder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/ECCV/v2_gulp160_two_stream_c2_0_c3_32_labels_cutoff5_classif0.1_cap0.9
+  pretrained_encoder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/Causal/v2_gulp160_causal_labels_cutoff5_classif1_cap0_feat47
   pretrained_decoder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/ECCV/v2_gulp160_two_stream_c2_0_c3_32_labels_cutoff5_classif0.1_cap0.9
   pretrained_file: model.best
   load_encoder_only: True
@@ -21,16 +21,14 @@ device:
   gpus: &gpus [0, 1]
 
 dataloaders:
-  kwargs: {batch_size: 1, num_workers: 8, pin_memory: False}
+  kwargs: {batch_size: 16, num_workers: 8, pin_memory: False}
 
 model:
   type: EncoderDecoder
-  encoder: TwoStreamEncoder
+  encoder: C3dLSTMEncoder
   encoder_args:
   encoder_kwargs: {encoder_output_size: 1024,
-                   rnn_output_size: 1024,
-                   c2d_out_ch: 0,
-                   c3d_out_ch: 32}
+                   rnn_output_size: 512}
   decoder: CoupledLSTMDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 256,
