--- a/src/main/configs/guillaume_configs/imagenet_baseline_model.yaml
+++ b/src/main/configs/guillaume_configs/imagenet_baseline_model.yaml
@@ -1,7 +1,7 @@
 paths:
   videos_folder: &vidpath /data-ssd/imagenet_features/
 
-  checkpoint_folder: /home/guillaume/model_checkpoint/ptcap_vgg16
+  checkpoint_folder: /home/guillaume/model_checkpoint/ptcap_vgg16_single_frame
 
   train_annot: &train_annot /data-ssd/20bn-official-datasets/annotations/v2-train.json
   validation_annot: /data-ssd/20bn-official-datasets/annotations/v2-validation.json
@@ -17,13 +17,13 @@ device:
   gpus: &gpus [0, 1]
 
 dataloaders:
-  kwargs: {batch_size: 8, num_workers: 8, pin_memory: False}
+  kwargs: {batch_size: 32, num_workers: 8, pin_memory: False}
 
 model:
   type: EncoderDecoder
-  encoder: VGG16RecurrentEncoder
+  encoder: VGG16Encoder
   encoder_args:
-  encoder_kwargs: {pretrained_path: /home/guillaume/model_checkpoints/vgg16_sthsth_v2/model.checkpoint}
+  encoder_kwargs: {pretrained_path: /home/guillaume/model_checkpoints/vgg16_single_frame_sthsth_v2/model.checkpoint}
   decoder: CoupledLSTMDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 256,
@@ -47,7 +47,7 @@ optimizer:
 scheduler:
   type: ReduceLROnPlateau
   kwargs: {factor: 0.1,
-           min_lr: 1.0e-8,
+           min_lr: 1.0e-6,
            optimizer: *optimizer,
            patience: 2,
            threshold: 1.0e-4}
@@ -78,6 +78,6 @@ logging:
   tensorboard_frequency: 1000
 
 preprocess:
-  crop_size: 48
+  crop_size: 1
   scale: 64.
   input_resize: [128, 128]
