--- a/src/main/configs/two_stream.yaml
+++ b/src/main/configs/two_stream.yaml
@@ -9,8 +9,8 @@ paths:
 
 
 pretrained:
-  pretrained_folder:
-  pretrained_file: model.latest
+  pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/ECCV/v2_gulp160_two_stream_c2_0_c3_32_labels_cutoff5_classif1_cap0
+  pretrained_file: model.best
 
 device:
   synchronize_gpu: &sync True
@@ -25,8 +25,8 @@ model:
   encoder_args:
   encoder_kwargs: {encoder_output_size: 1024,
                    rnn_output_size: 1024,
-                   c2d_out_ch: 16,
-                   c3d_out_ch: 48}
+                   c2d_out_ch: 0,
+                   c3d_out_ch: 32}
   decoder: CoupledLSTMDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 256,
@@ -85,18 +85,18 @@ preprocess:
     train: &train_video_prep
       [
         {type: PadVideo, args:  [[48, 96, 96]]},
-        {type: CenterCropper, args:  [[48, 96, 96]]},
+        {type: RandomCrop, args:  [[48, 96, 96]]},
         {type: Float32Converter, args: [64.]},
         {type: PytorchTransposer, args:}
       ]
-    valid:
+    valid: &valid_video_prep
       [
         {type: PadVideo, args:  [[48, 96, 96]]},
         {type: CenterCropper, args:  [[48, 96, 96]]},
         {type: Float32Converter, args: [64.]},
         {type: PytorchTransposer, args:}
       ]
-    test: *train_video_prep
+    test: *valid_video_prep
 
 dataset:
   train_dataset_type: GulpVideoDataset
