--- a/src/main/configs/reinforce.yaml
+++ b/src/main/configs/reinforce.yaml
@@ -13,6 +13,7 @@ paths:
 pretrained:
   pretrained_path:
   pretrained_encoder_path: "/home/farzaneh/PycharmProjects/pytorch-captioning/results/Causal/v2_gulp160_causal_labels_cutoff5_classif1_cap0/model.latest"
+  pretrained_decoder_path: "/home/farzaneh/PycharmProjects/pytorch-captioning/results/Causal/v2_gulp160_causal_labels_cutoff5_classif1_cap0"
 
   load_encoder_only: True
 
