--- a/src/main/configs/causal_conv.yaml
+++ b/src/main/configs/causal_conv.yaml
@@ -7,6 +7,7 @@ paths:
   train_annot: &train_annot /data/20bn-something-something-v2/v2-train-single.json
   validation_annot: /data/20bn-something-something-v2/v2-test-single.json
   test_annot: /data/20bn-something-something-v2/v2-test-single.json
+  annot_type: v2
 
 
 pretrained:
@@ -26,7 +27,8 @@ model:
   encoder: C3dLSTMEncoder
   encoder_args:
   encoder_kwargs: {encoder_output_size: 1024,
-                   rnn_output_size: 512}
+                   rnn_output_size: 512,
+                   causal: True}
   decoder: CoupledLSTMDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 256,
@@ -82,6 +84,26 @@ logging:
   tensorboard_frequency: 1000
 
 preprocess:
-  crop_size: [48, 96, 96]
-  scale: 64.
-  input_resize: [128, 128]
+    train: &train_video_prep
+      [
+        {type: PadVideo, args:  [[48, 96, 96]]},
+        {type: RandomCrop, args:  [[48, 96, 96]]},
+        {type: Float32Converter, args: [64.]},
+        {type: PytorchTransposer, args:}
+      ]
+    valid: &valid_video_prep
+      [
+        {type: PadVideo, args:  [[48, 96, 96]]},
+        {type: CenterCropper, args:  [[48, 96, 96]]},
+        {type: Float32Converter, args: [64.]},
+        {type: PytorchTransposer, args:}
+      ]
+    test: *valid_video_prep
+
+dataset:
+  train_dataset_type: GulpVideoDataset
+  train_dataset_kwargs: {gulp_dir: *vidpath,
+                         size: [128, 128]}
+  valid_dataset_type: GulpVideoDataset
+  valid_dataset_kwargs: {gulp_dir: *vidpath,
+                         size: [128, 128]}
