--- a/src/main/configs/reinforce.yaml
+++ b/src/main/configs/reinforce.yaml
@@ -30,7 +30,7 @@ model:
   encoder_args:
   encoder_kwargs: {encoder_output_size: 1024,
                    rnn_output_size: 512}
-  decoder: StatefulDecoder
+  decoder: CoupledLSTMDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 256,
                    hidden_size: 1024,
